testar os titulos

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>aaaaaaaaaaaaaaaaaaaaaa</title>
+    <title id="title">aaaaaaaaaaaaaaaaaaaaaa</title>
     <title>site exemplo - aula 23/07</title>
     <p>tomale</p>
     <link rel="stylesheet" href="style.css">
