--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>site exemplo - aula 23/07</title>
+    <h1>site fodastico</h1>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <p>tomale</p>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <title id="title">aaaaaaaaaaaaaaaaaaaaaa</title>
-    <title>site exemplo - aula 23/07</title>
 
     <article>teste</article>
     <article>teste2</article>
