--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>site exemplo - aula 23/07</title>
-    <h1>site fodastico</h1>
+    <h1 id="titulo_foda">site fodastico</h1>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
